@@ -7496,34 +7496,10 @@ decl_stmt|;
 comment|// If region was in transition (was in zk) force it offline for reassign
 try|try
 block|{
-name|ZKAssign
-operator|.
-name|createOrForceNodeOffline
-argument_list|(
-name|watcher
-argument_list|,
-name|regionInfo
-argument_list|,
-name|this
-operator|.
-name|master
-operator|.
-name|getServerName
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|KeeperException
-operator|.
-name|NoNodeException
-name|nne
-parameter_list|)
-block|{
-comment|// This is fine
-block|}
 comment|// Process with existing RS shutdown code
+name|boolean
+name|isNotDisabledAndSplitted
+init|=
 name|ServerShutdownHandler
 operator|.
 name|processDeadRegion
@@ -7538,7 +7514,38 @@ name|this
 operator|.
 name|catalogTracker
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|isNotDisabledAndSplitted
+condition|)
+block|{
+name|ZKAssign
+operator|.
+name|createOrForceNodeOffline
+argument_list|(
+name|watcher
+argument_list|,
+name|regionInfo
+argument_list|,
+name|master
+operator|.
+name|getServerName
+argument_list|()
+argument_list|)
 expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|KeeperException
+operator|.
+name|NoNodeException
+name|nne
+parameter_list|)
+block|{
+comment|// This is fine
+block|}
 block|}
 block|}
 block|}
